Fixed current progress container spacing below btn

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    height: inherit;
     background-color: #3a3a3a;
     color: #fff;
 }
@@ -66,7 +67,7 @@ body {
 .start-exp-btn {
     text-decoration: none;
     padding: .75rem;
-    margin-bottom: 4rem;
+    /* margin-bottom: 4rem; */
     width: 87.5%;
     border-radius: 16px;
     background-color: #1E8A49;
